Balancing up layout spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@400;600&family=Merriweather:wght@300;400&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@400;600&family=Merriweather:wght@300;400&display=swap'); */
+
+
+@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC&family=Hind+Madurai&family=Quicksand&display=swap');
+
 
 * {
     margin: 0;
@@ -7,14 +11,14 @@
 }
 
 body {
-    font-family: Merriweather, serif, sans-serif;
+    font-family: 'Hind Madurai', serif, sans-serif;
     font-weight: 300;
     color: #3a3a3a;
 }
 
 h1, h2, h3 {
-    font-family: 'Josefin Slab';
-    font-weight: 600;
+    font-family: Quicksand, serif, sans-serif;
+    font-weight: 300;
     color: black;
 }
 
@@ -40,15 +44,15 @@ header > a {
 
 #logo{
     color: ivory;
-    font-size: 3rem;
-
+    font-size: 2.5rem;
+    /* margin: .25rem; */
 }
 
 /* Nav elements */
 
 #nav-menu {
     float: right;
-    font-size: 1.2em;
+    font-size: 1.5em;
     display: flex;
     flex-wrap: wrap;
     align-content: center;
@@ -101,15 +105,18 @@ header > a {
 
 .section-title {
     text-align: center;
-    font-size: 2rem;
-    padding: 30px 0;
+    font-size: 1.8rem;
+    padding: 20px 0;
     /* align-items: center;
     align-content: center; */
 }
 
+.section-title h2, .section-title h3 {
+    font-size: 1.8rem;
+}
 .section-title p{
     font-size: 1.1rem;
-    padding: 20px 20%;
+    padding: 10px 10%;
 }
 
 .sub-cont {
@@ -268,7 +275,6 @@ footer {
     flex-direction: row;
     justify-content: space-around;
     background-color: #6399c9;
-    padding-bottom: 30px;
 }
 
 
@@ -293,11 +299,7 @@ footer {
     padding: 15px;
   }
 
-  .signup-form h2 {
-    color: ivory;
-  }
-
-  .signup-form h3 {
+  .signup-form h2, .signup-form h3 {
     color: ivory;
   }
 
@@ -310,7 +312,7 @@ footer {
     color: #fafafa;
     width: 100%;
     height: 25px;
-    margin: 5px 0 20px 0;
+    margin: 5px 0;
     border: 1px solid #fafafa;
     border-radius: 2px;
   }
@@ -390,8 +392,8 @@ footer {
     }
 
     .sub-cont {
-        margin: 0 0 30px 0;
-        padding: 0;
+        /* margin: 0 0 30px 0; */
+        padding: 0 0 20px 0;
     }
 
     .image-outer, .image-outer-history{
@@ -420,7 +422,7 @@ footer {
 @media screen and (max-width:750px) {
    
     #logo {
-        font-size: 1.8em;
+        font-size: 1.5em;
     }
 
     #nav-menu {
@@ -442,7 +444,7 @@ footer {
 
     .section-title {
         font-size: 1.4em;
-        margin: 0 20px;
+        /* margin: 0 20px; */
 
     }
    
@@ -452,11 +454,11 @@ footer {
 
     .image-outer, .image-outer-history{
         margin: 10px;
-        width: 350px;
-        height: 350px;
+        width: 300px;
+        height: 300px;
     }
   
     .image-outer img, .image-outer-history img {
-        max-width: 350px;
+        max-width: 300px;
     }
 }
